2003-07-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* hyper/dbsym.c (dbtclfetch): Check that the result
	TclObj is not NULL before setting the interp
	result. This avoids a crash when an improperly
	formatted -col option is passed.

2003-07-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Don't require the
	SEMICOLON token when matching an include
	statement that includes parens. This fixes
	statements like <? require_once("one.php") ?>
	which are valid PHP but were not being
	recognised because a semicolon was expected.
	* tests/parsers/php.test: Add tests for
	include line with no semicolon and include
	with parens and no semicolon.

2003-07-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/common/lexinput.c (sn_encoded_input,
	translate_crlf): Add translate_crlf method
	and use it to translate CRLF sequences to
	LF in the buffer returned by sn_encoded_input.
	Not having to deal with the CRLF vs LF mess
	makes it easier to write parsers.
	* tests/parsers/m4.test: Add CRLF test case.
	Add FIXME notes and cleanup the hout file
	when finishing.
	* tests/parsers/php.test: Add CRLF test case.

2003-07-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/assembly/ppc601-eabi/abrowser.c: Regen.
	* parsers/assembly/ppc601-eabi/abrowser.l: Add
	sn_reset_encoding call.
	* parsers/chill/main.c: Add sn_reset_encoding call.
	* parsers/m4/m4browser.c: Regen.
	* parsers/m4/m4browser.l: Add sn_reset_encoding call.
	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l:Add sn_reset_encoding call.
	* sdk/parsers/examples/assembly/abrowser.l.in:
	* sdk/parsers/examples/elf/ebrowser.l:
	Add sn_reset_encoding call.

2003-07-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/m4/m4browser.c: Regen.
	* parsers/m4/m4browser.l: Move function call
	xref code into a helper function. Recognize
	an plain line of text that contains only the
	letters A-Z or the _ character as a macro